--- a/布局/canvas/canvas对象介绍.html
+++ b/布局/canvas/canvas对象介绍.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
+canvas中文网： https://www.canvasapi.cn/CanvasRenderingContext2D/createRadialGradient#&syntax
 getContext() 方法可返回一个对象，该对象提供了用于在画布上绘图的方法和属性。
 
 1.颜色、样式和阴影
@@ -22,9 +23,9 @@ shadowOffsetY	设置或返回     阴影距形状的垂直距离
 ================================================================
 createLinearGradient()	创建线性渐变（用在画布内容上）
 createPattern()			在指定的方向上重复指定的元素
-createRadialGradient()	创建放射状/环形的渐变（用在画布内容上）
+createRadialGradient()	创建放射状/环形的渐变（用在画布内容上） (起始圆的横坐标, 起始圆的纵坐标, 起始圆的半径, 结束圆的横坐标, 结束圆的纵坐标, 结束圆的半径)
 addColorStop()			规定渐变对象中的颜色和停止位置
-
+<br>
 2.线条样式
 	
 属性			描述
@@ -33,7 +34,7 @@ lineCap		设置或返回 线条的结束端点样式
 lineJoin	设置或返回 两条线相交时，所创建的拐角类型
 lineWidth	设置或返回当前的 线条宽度
 miterLimit	设置或返回 最大斜接长度
-
+<br>
 3.矩形
 	
 方法				描述
@@ -42,7 +43,7 @@ rect()			创建矩形
 fillRect()		绘制“被填充”的矩形
 strokeRect()	绘制矩形（无填充）
 clearRect()		在给定的矩形内清除指定的像素
-
+<br>
 4.路径
 	
 方法					描述
@@ -59,7 +60,7 @@ bezierCurveTo()		创建三次方贝塞尔曲线
 arc()				创建弧/曲线（用于创建圆形或部分圆）
 arcTo()				创建两切线之间的弧/曲线
 isPointInPath()		如果指定的点位于当前路径中，则返回 true，否则返回 false
-
+<br>
 5.转换
 	
 方法					描述
@@ -69,7 +70,7 @@ rotate()			旋转当前绘图
 translate()			重新映射画布上的 (0,0) 位置
 transform()			替换绘图的当前转换矩阵
 setTransform()		将当前转换重置为单位矩阵。然后运行 transform()
-
+<br>
 6.文本
 	
 属性					描述
@@ -83,13 +84,13 @@ textBaseline		设置或返回在绘制文本时使用的当前文本基线
 fillText()			在画布上绘制“被填充的”文本
 strokeText()		在画布上绘制文本（无填充）
 measureText()		返回包含指定文本宽度的对象
-
+<br>
 7.图像绘制
 
 方法					描述
 =========================================================================
 drawImage()			向画布上绘制图像、画布或视频
-
+<br>
 8.像素操作
 
 属性					描述
@@ -103,14 +104,14 @@ data				返回一个对象，其包含指定的 ImageData 对象的图像数据
 createImageData()	创建新的、空白的 ImageData 对象
 getImageData()		返回 ImageData 对象，该对象为画布上指定的矩形复制像素数据
 putImageData()		把图像数据（从指定的 ImageData 对象）放回画布上
-
+<br>
 9.合成
 	
 属性					描述
 ==========================================================================
 globalAlpha			设置或返回绘图的当前 alpha 或透明值
 globalCompositeOperation	设置或返回新图像如何绘制到已有的图像上
-
+<br>
 10.其他
 
 方法					描述
@@ -121,5 +122,38 @@ restore()			返回之前保存过的路径状态和属性
 createEvent()	 
 getContext()	 
 toDataURL()	 
+
+
+window.requestAnimationFrame()
+==============================================================================================================================
+window.requestAnimationFrame() 将告知浏览器你马上要开始动画效果了，后者需要在下次动画前调用相应方法来更新画面。
+							   这个方法就是传递给window.requestAnimationFrame()的回调函数。
+
+这个方法原理其实也就跟setTimeout/setInterval差不多，通过递归调用同一方法来不断更新画面以达到动起来的效果，
+但它优于setTimeout/setInterval的地方在于:
+它是由浏览器专门为动画提供的API，在运行时浏览器会自动优化方法的调用，并且如果页面不是激活状态下的话，动画会自动暂停，有效节省了CPU开销。
+
+<script type="text/javascript">
+	window.onload = function () {
+		var i = 0;
+
+		(function consoleTip(x) {
+			console.log(x);
+			window.requestAnimationFrame(consoleTip);
+		})(i++);
+
+
+		/*
+			(function a(x)) (i++);     // 立即执行函数，相当于定义了a方法后立即调用
+
+			function a(x) {
+				console.log(x);
+				window.requestAnimationFrame(consoleTip); // 再次调用自己
+			}
+
+			a(i++); // 调用方法
+		*/
+	}
+</script>
 </body>
 </html>
