--- a/布局/轮播图/js原生轮播图.html
+++ b/布局/轮播图/js原生轮播图.html
@@ -83,11 +83,11 @@
 <body>
 	<div class="box">
         <ul class="banner-box img">
-            <li><img src="img/1.jpg" alt="" /></li>
-            <li><img src="img/2.jpg" alt="" /></li>
-            <li><img src="img/3.jpg" alt="" /></li>
-            <li><img src="img/4.jpg" alt="" /></li>
-            <li><img src="img/5.jpg" alt="" /></li>
+            <li><img src="../css动画/img/autosize1.jpg" alt="" /></li>
+            <li><img src="../css动画/img/autosize2.jpg" alt="" /></li>
+            <li><img src="../css动画/img/autosize1.jpg" alt="" /></li>
+            <li><img src="../css动画/img/autosize2.jpg" alt="" /></li>
+            <li><img src="../css动画/img/autosize1.jpg" alt="" /></li>
         </ul>
         <ul class="circle"></ul>
         <ul class="arrow">
